[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UI/background/window_background2.png" type="Texture" id=1]
[ext_resource path="res://scenes/userInerface/Dialog.gd" type="Script" id=2]
[ext_resource path="res://assets/npcSprites/100000/100000.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/droid-sans/DroidSans-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="Theme" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[node name="DialogBox" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -399.0
margin_top = -125.0
margin_right = 399.0
margin_bottom = 100.0
rect_min_size = Vector2( 798, 225 )
mouse_filter = 1
script = ExtResource( 2 )

[node name="Background" type="NinePatchRect" parent="."]
margin_right = 798.0
margin_bottom = 225.0
rect_min_size = Vector2( 798, 160 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 48, 48 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="Background/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 793.0
margin_bottom = 220.0
rect_min_size = Vector2( 788, 160 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.356863, 0.356863, 0.356863, 1 )

[node name="V" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 793.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="Background/MarginContainer/V"]
margin_right = 788.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/V"]
margin_top = 14.0
margin_right = 788.0
margin_bottom = 215.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/MarginContainer/V/HBoxContainer"]
margin_right = 624.0
margin_bottom = 201.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2"]
margin_right = 624.0
margin_bottom = 172.0
rect_min_size = Vector2( 624, 160 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogContainer" type="MarginContainer" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_right = 624.0
margin_bottom = 172.0
rect_min_size = Vector2( 624, 67 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4

[node name="text_bg" type="ColorRect" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer/DialogContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 616.0
margin_bottom = 168.0
rect_min_size = Vector2( 500, 59 )
mouse_filter = 1
color = Color( 0.14902, 0, 1, 0.145098 )

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer/DialogContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 616.0
margin_bottom = 168.0
rect_min_size = Vector2( 500, 59 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer/DialogContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 603.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer/DialogContainer/MarginContainer/VBoxContainer"]
margin_right = 598.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
theme = SubResource( 1 )
text = "Hello"
fit_content_height = true
scroll_active = false

[node name="QuestVBox" type="VBoxContainer" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer/DialogContainer/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 598.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonHbox" type="HBoxContainer" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer/DialogContainer/MarginContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 598.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer/DialogContainer/MarginContainer/VBoxContainer/ButtonHbox"]
margin_right = 598.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="back" type="Button" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer/DialogContainer/MarginContainer/VBoxContainer/ButtonHbox"]
visible = false
margin_left = 513.0
margin_right = 554.0
margin_bottom = 20.0
shortcut_in_tooltip = false
text = "back"

[node name="next" type="Button" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer/DialogContainer/MarginContainer/VBoxContainer/ButtonHbox"]
visible = false
margin_left = 558.0
margin_right = 598.0
margin_bottom = 20.0
text = "next"

[node name="ButtonContainer" type="MarginContainer" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2"]
margin_top = 176.0
margin_right = 624.0
margin_bottom = 201.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/ButtonContainer"]
margin_left = 8.0
margin_right = 616.0
margin_bottom = 20.0

[node name="exit" type="Button" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/ButtonContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
shortcut_in_tooltip = false
text = "exit"

[node name="Control" type="Control" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/ButtonContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 608.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="accept" type="Button" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/ButtonContainer/HBoxContainer"]
visible = false
margin_left = 554.0
margin_right = 608.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "accept"

[node name="decline" type="Button" parent="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/ButtonContainer/HBoxContainer"]
visible = false
margin_left = 549.0
margin_right = 608.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "decline"

[node name="NPC_Box" type="Control" parent="Background/MarginContainer/V/HBoxContainer"]
margin_left = 628.0
margin_right = 788.0
margin_bottom = 200.0
rect_min_size = Vector2( 160, 200 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="bg" type="ColorRect" parent="Background/MarginContainer/V/HBoxContainer/NPC_Box"]
margin_right = 160.0
margin_bottom = 220.0
rect_min_size = Vector2( 80, 200 )
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )

[node name="Sprite" type="Sprite" parent="Background/MarginContainer/V/HBoxContainer/NPC_Box"]
position = Vector2( 69, 88 )
rotation = 3.14159
scale = Vector2( 0.8, -0.8 )
texture = ExtResource( 3 )
hframes = 16

[node name="Label" type="Label" parent="Background/MarginContainer/V/HBoxContainer/NPC_Box/Sprite"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 77.5002
margin_top = 62.4998
margin_right = 237.5
margin_bottom = 76.4998
rect_scale = Vector2( -1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Kevin"
align = 1
valign = 1

[connection signal="gui_input" from="Background/MarginContainer/V/Control" to="." method="_on_Control_gui_input"]
[connection signal="pressed" from="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer/DialogContainer/MarginContainer/VBoxContainer/ButtonHbox/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/VBoxContainer/DialogContainer/MarginContainer/VBoxContainer/ButtonHbox/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/ButtonContainer/HBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/ButtonContainer/HBoxContainer/accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="Background/MarginContainer/V/HBoxContainer/VBoxContainer2/ButtonContainer/HBoxContainer/decline" to="." method="_on_decline_pressed"]
